tests/transpiler/x/swift/partial_application.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/051/main.swift:5:17: error: missing argument for parameter #2 in call
1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:19 GMT+7
2 | func add(_ a: Int, _ b: Int) -> Int {
  |      `- note: 'add' declared here
3 |     return (a + b)
4 | }
5 | let add5 = add(5)
  |                 `- error: missing argument for parameter #2 in call
6 | print(add5(3))
7 | 
