tests/transpiler/x/swift/partial_application.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:19 GMT+7
func add(_ a: Int, _ b: Int) -> Int {
    return (a + b)
}
let add5 = add(5)
print(add5(3))
